# prexsyn

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  pyright.yml
configs/: config.yaml  enamine-test-small_rxn115.yml  enamine2310_rxn115_202511.yml  enamine2310_rxn115_bsz512.yml  v1_enamine-test_rxn115.yml  v1_enamine2310_rxn115.yml
configs/chemical_space/: enamine_rxn115.yaml
configs/model/: v1.yaml
configs/property/: v1.yaml
data/: .gitignore
data/benchmarks/: chembl_1k.txt
data/building_blocks/: enamine-test-small.sdf
data/trained_models/: enamine2310_rxn115_202511.yml  v1_converted.yaml
docs/: index.md
docs/customization/: chemical-space.md  model.md
docs/getting-started/: .nav.yml  data.md  examples.md  import.md  installation.md
docs/prexsyn-engine/: index.md
docs/reproducibility/: .nav.yml  chemical-space-projection.md  molecular-sampling.md  property-query.md  training.md
prexsyn/: __init__.py
prexsyn/applications/analog/: analog.py
prexsyn/applications/optim/: step.py
prexsyn/chemspace/: chemspace.py
prexsyn/data/: online_dataset.py  struct.py
prexsyn/factories/: chemical_space.py  facade.py  tokenization.py
prexsyn/factories/property/: base.py  rdkit_descriptors.py
prexsyn/factory/: __init__.py  config.py  descriptor_registry.py  download.py  factory.py
prexsyn/models/: __init__.py  prexsyn.py
prexsyn/models/attention/: __init__.py  mha.py  pe.py  transformer.py
prexsyn/models/embeddings/: __init__.py  base.py  descriptor.py  synthesis.py
prexsyn/models/outputs/: synthesis.py
prexsyn/properties/: __init__.py  base.py  fingerprint.py
prexsyn/queries/: planner.py
prexsyn/samplers/: basic.py  builder.py  query.py
prexsyn/shortcuts/: __init__.py  genetic.py  loader.py  projector.py
prexsyn/training/: data_module.py  model_wrapper.py  online_dataset.py
prexsyn/utils/: download.py  draw.py  lmdb_dict.py  metrics.py  syndag.py
prexsyn/utils/oracles/: __init__.py  autodock.py  cached.py  common.py  demo.py  sa_score.py
scripts/: create_chemspace.py  train.py
scripts/benchmarks/: analog.py  optim.py  projection.py  query.py
scripts/examples/: optim.py  projection.py  sampling.py
scripts/internals/: analog.py  convert_ckpt.py  convert_old_ckpt.py  create_chemspace.py  draw_synthesis.py  gpu_memory.py  make_fp_ref.py  mk_sdf_subset.py  test_data_stream.py  test_query.py
typings/rdkit/Chem/: rdDepictor.pyi
