[project]
name = "prexsyn"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [{ name = "Shitong Luo", email = "luost26@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.3.0,<9",
    "hydra-core>=1.3.2,<2",
    "joblib>=1.5.2,<2",
    "lightning>=2.5.5,<3",
    "lmdb>=1.7.3,<2",
    "matplotlib>=3.10.6,<4",
    "numpy>=2.3.3,<3",
    "omegaconf>=2.3.0,<3",
    "pandas>=2.3.3",
    "pydot>=4.0.1,<5",
    "rich>=14.2.0,<15",
    "scikit-learn>=1.7.2,<2",
    "seaborn>=0.13.2,<0.14",
    "torch>=2.8.0,<3",
    "tqdm>=4.67.1,<5",
    "wandb>=0.22.2,<0.23",
]

[project.urls]
Homepage = "https://prexsyn.readthedocs.io/"
Documentation = "https://prexsyn.readthedocs.io/"
Source = "https://github.com/luost26/prexsyn"

[project.optional-dependencies]
eval = [
    ## GuacaMol
    "prexsyn-third-party @ git+https://github.com/luost26/prexsyn-third-party.git",
    ## sEH proxy
    "torch_geometric",
    ## Autodock
    "gemmi",
    "meeko",
    "molscrub",
]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
    "pytest",
    "ipykernel",
    "ipywidgets",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prexsyn", "prexsyn.*"]

[tool.setuptools.dynamic]
version = { attr = "prexsyn.__version__" }

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["prexsyn", "prexsyn_engine"]

[tool.pyright]
typeCheckingMode = "standard"
ignore = ["scripts/internals"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
prexsyn = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["eval", "dev"], solve-group = "default" }
dev-engine = { features = [
    "eval",
    "dev",
    "dev-engine",
], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.11.0,<3.14"
pip = "*"
setuptools = "*"
rdkit = ">=2025.3.6"
graphviz = ">=13"
prexsyn-engine = ">=0.1.1.dev5"

[tool.pixi.feature.dev-engine.dependencies]
cmake = ">=4.1.1,<5"
ninja = ">=1.13.1,<2"

clangxx = "==21.1.0"
clang-tools = "==21.1.0"
llvm-tools = "==21.1.0"
compiler-rt = "==21.1.0"
llvm-openmp = "*"

librdkit-dev = ">=2025.3.6"
libboost-devel = ">=1.86.0,<2"
libboost-python-devel = ">=1.86.0,<2"
eigen = ">=3.4.0,<4"
spdlog = ">=1.15.3,<2"
gtest = ">=1.14.0,<2"

[tool.pixi.feature.dev-engine.tasks]
install-engine = { cmd = "pip install ../prexsyn-engine" }
