[project]
name = "prexsyn"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [{ name = "Shitong Luo", email = "luost26@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
    "prexsyn-engine>=1.0.0.dev1,<2",
    "click>=8.3.0,<9",
    "hydra-core>=1.3.2,<2",
    "joblib>=1.5.2,<2",
    "lightning>=2.5.5,<3",
    "lmdb>=1.7.3,<2",
    "matplotlib>=3.10.6,<4",
    "numpy>=2.3.3,<3",
    "omegaconf>=2.3.0,<3",
    "pandas>=2.3.3",
    "pydot>=4.0.1,<5",
    "rich>=14.2.0,<15",
    "scikit-learn>=1.7.2,<2",
    "seaborn>=0.13.2,<0.14",
    "torch>=2.8.0,<2.9",
    "tqdm>=4.67.1,<5",
    "wandb>=0.22.2,<0.23",
]

[project.urls]
Homepage = "https://prexsyn.readthedocs.io/"
Documentation = "https://prexsyn.readthedocs.io/"
Source = "https://github.com/luost26/prexsyn"

[project.optional-dependencies]
eval = [
    ## GuacaMol
    "prexsyn-third-party @ git+https://github.com/luost26/prexsyn-third-party.git",
    ## sEH proxy
    "torch_geometric",
    ## Autodock
    "gemmi",
    "meeko",
    "molscrub",
]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
    "pytest",
    "ipykernel",
    "ipywidgets",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prexsyn", "prexsyn.*"]

[tool.setuptools.dynamic]
version = { attr = "prexsyn.__version__" }

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["prexsyn", "prexsyn_engine"]

[tool.pyright]
typeCheckingMode = "standard"
ignore = ["scripts/internals"]
