[project]
name = "prexsyn"
dynamic = ["version"]
requires-python = ">=3.11"
authors = [{ name = "Shitong Luo", email = "luost26@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]
dependencies = [
    "prexsyn-engine>=1.1.0,<2",
    "torch>=2.8.0",
    "click>=8.3.0",
    "hydra-core>=1.3.2",
    "joblib>=1.5.2",
    "lightning>=2.5.5",
    "lmdb>=1.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "pydot>=4.0.1",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    "rdkit>=2025.9.6",
    "psutil>=7.2.2",
]

[project.urls]
Homepage = "https://prexsyn.readthedocs.io/"
Documentation = "https://prexsyn.readthedocs.io/"
Source = "https://github.com/luost26/prexsyn"

[project.optional-dependencies]
eval = [
    ## GuacaMol
    "prexsyn-third-party @ git+https://github.com/luost26/prexsyn-third-party.git",
    ## sEH proxy
    "torch_geometric",
    ## Autodock
    "gemmi",
    "meeko",
    "molscrub",
]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
    "pytest",
    "ipykernel",
    "ipywidgets",
    "mkdocs-material",
    "mkdocs-awesome-nav",
    "build",
    "twine",
    "huggingface_hub",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["prexsyn", "prexsyn.*"]

[tool.setuptools.dynamic]
version = { attr = "prexsyn.__version__" }

# [[tool.uv.index]]
# name = "prexsyn-engine-dev"
# url = "https://luost26.github.io/prexsyn-engine/simple"
# explicit = true

# [tool.uv.sources]
# prexsyn-engine = { index = "prexsyn-engine-dev" }

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["prexsyn", "prexsyn_engine"]

[tool.pyright]
typeCheckingMode = "standard"
ignore = ["scripts/internals"]
